--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<pre>
 
 ![masthead](http://lorempixel.com/1000/300/)
 
@@ -19,5 +19,7 @@ article-based sites like this. If the user wants to read your blog, they can spe
 a few processor cycles to render the page themselves.
 
 [gist:c5d5244d89caa0775d92]
+
+</pre>
 
 <script src="js/jr.js"></script>
